# lri-rs

./: .gitignore  .gitmodules  COMPATIBILITY.md  COPYRIGHT  Cargo.toml  FUSION.md  LRI.md  Makefile  OPEN-QUESTIONS.md  PATENTS.md  RE-LIGHT.md  README.md  VERSION  bayer_jpeg.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
light/: Cargo.toml
light/examples/: fixture_scan.rs  mirror_aim.rs  pose_det.rs  privacy_scan.rs
light/src/: api.rs  dng.rs  extract.rs  fuse.rs  fuse_export.rs  fusion_sidecar.rs  gather.rs  grid.rs  lib.rs  main.rs  render.rs  session.rs  threads.rs  thumbnail.rs  tiff_out.rs  validate_rt.rs
lri-proto/: Cargo.toml  README.md
lri-rs/: Cargo.toml
lri-rs/benches/: unpack.rs
lri-rs/src/: bayer_jpeg.rs  block.rs  distortion.rs  error.rs  fixtures.rs  fusion.rs  lib.rs  mirror_pose.rs  types.rs  unpack.rs  warp.rs
lumen/src-tauri/: Cargo.toml  tauri.conf.json
lumen/src-tauri/capabilities/: default.json
lumen/src-tauri/icons/: icon.icns
lumen/src-tauri/src/: lib.rs  main.rs  state.rs
lumen/ui/: index.html  main.js  styles.css
openfusion/: Cargo.toml  README.md
openfusion/src/: lib.rs  raster.rs  stereo.rs  warp.rs
prism/src/: main.rs
scripts/: calver
