[workspace]
members = ["lri-proto", "lri-rs", "light"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

[profile.bench]
inherits = "release"
debug = true