[workspace]
members = ["lri-proto", "lri-rs", "light", "lumen/src-tauri"]
resolver = "2"

[workspace.package]
version = "2026.7.14"
edition = "2021"
authors = ["isamarin × BLMK"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

[profile.bench]
inherits = "release"
debug = true