[workspace]
members = ["lri-proto", "lri-rs", "openfusion", "light", "lumen/src-tauri"]
resolver = "2"

[workspace.package]
version = "2026.7.14"
edition = "2021"
authors = ["isamarin × BLMK"]
# Composite tree: fork changes AGPL-3.0-or-later, upstream (gennyble) ISC,
# lri-proto MIT. ISC and MIT are AGPL-compatible, so the whole is AGPL.
# Per-component notices in COPYRIGHT.
license = "AGPL-3.0-or-later"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

[profile.bench]
inherits = "release"
debug = true