[package]
name = "light"
version.workspace = true
edition.workspace = true
description = "Light L16 LRI tooling — isamarin × BLMK"
default-run = "light"

[lib]
path = "src/lib.rs"

[[bin]]
name = "light"
path = "src/main.rs"

[dependencies]
lri-rs = { path = "../lri-rs" }
clap = { version = "4.5", features = ["derive"] }
camino = "1.1"
owo-colors = "4.1"
rayon = "1.10"
png = "0.17"
rawproc = { git = "https://github.com/eclecticnybles/gaze" }
rawloader = "0.37"
nalgebra = "0.31"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
memmap2 = "0.9"
ouroboros = "0.18"