[package]
name = "lri-rs"
version.workspace = true
edition.workspace = true

[dependencies]
lri-proto = { path = "../lri-proto" }
thiserror = "2"
zune-core = "0.5"
zune-jpeg = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "unpack"
harness = false