[package]
name = "lumen"
version.workspace = true
edition.workspace = true
description = "Light L16 desktop viewer — isamarin × BLMK"

[lib]
name = "lumen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
light = { path = "../../light" }
lri-rs = { path = "../../lri-rs" }
tauri = { version = "2.6", features = [] }
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = "1.1"