[package]
name = "lumen"
version.workspace = true
edition.workspace = true
description = "Luminat — illuminate the 16→1 ritual (Light L16 desktop) — isamarin × BLMK"

[lib]
name = "lumen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
light = { path = "../../light" }
lri-rs = { path = "../../lri-rs" }
tauri = { version = "2.6", features = [] }
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = "1.1"
base64 = "0.22"
tauri-plugin-drag = "2.1.1"
